fix spacing for active nav-item

--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -12,6 +12,7 @@ a.nav-link {
 
     &.active:after {
         content: "\2713";
+        padding-left: 1rem;
         font-family: "regarch-font" !important;
         font-style: normal !important;
         font-weight: normal !important;
